--- a/Slak/27.md
+++ b/Slak/27.md
@@ -344,7 +344,7 @@ Isidore might as well have taken the planets as signs in the astrological sense 
  
  ## Bede
  
- ### Bede's scanty science.
+ ### Bede scanty science
  
  The scientific acquisitions of Bede have too often been referred to in exaggerated terms. Sharon Turner said of him, 
 
@@ -374,7 +374,7 @@ It is noteworthy that in order to fulfill the monks' desire for a fuller treatme
 
  [^634:4]: A few MSS, chiefly from France, earlier than the 12th cen-tury, are: BN 5543, 9th century; BN 15685, 9th century; BN nouv. acq. 1612, 1615, and 1632, all 9th or 10th century; Amiens 222, 9th  century; Cambrai 925, 9th century: Ivrea 3, 9th century; Ivrea 6, 10th century; Berlin 128, 8-9th century; Berlin 130, 9-10th century; CLM 18158, 11th century;  CLM 21557, 11th century,  I have not noted the MSS of Bede in the British Museum and Bodleian collections. 
 
- ### Bede's _ De natura rerum_ .
+ ### Bede De natura rerum
  
 Of Bede's Hexaemeron we spoke in an earlier chapter. His chief extant genuine scientific treatise is the aforesaid _ De natura rerum_,  [^635:1] a very curtailed discussion of astronomy and meteorology. It is very similar to Isidore's treatise of the same title, but is even briefer, omitting for the most part the mention of authorities and the Biblical quotations and allegorical applications which make up a considerable portion of Isidore's brief work. 
 
