--- a/Slak/32.md
+++ b/Slak/32.md
@@ -1,7 +1,9 @@
 
 # Chapter XXXII 
 
-## Constantinus Africanus: c. 1015 - 1087. 
+## Constantinus Africanus
+
+c. 1015 - 1087. 
 
 ### Reputation and influence. 
 
