--- a/Slak/34.md
+++ b/Slak/34.md
@@ -1,7 +1,9 @@
 
 # Chapter XXXIV 
 
-## Marbod, bishop of Rennes, 1035-1123 
+## Marbod, bishop of Rennes 
+
+1035-1123 
 
 > "Nec duhium cuiquam debet falsumque videri 
 > Quin sua sit gemmis divinitus insita virtus; 
@@ -21,7 +23,7 @@ Indeed one manuscript of it seems to date from that century [^775:2] and there a
 
 Born in the county of Anjou, Marbod attended the church school there, became the schoolmaster himself from 1067 to 1 08 1, during which time he probably composed the _Liber lapidum_, then served as archdeacon under three successive bishops, and finally himself became a bishop in 1096. He attended church councils in 1103 and 1104 and died in September, 1123, in an Angevin monastery, whose monks issued a eulogistic encyclical letter on that occasion, while two archdeacons celebrated his integrity, learning, and eloquence in admiring verse. Marbod's own productions are also in poetical form. It is interesting to note that despite his early date he was eulogized not as a lone man of letters in an uncultured age but as "the king of orators, although at that time all Gaul resounded with varied studies." 
 
-### Relation of his _Liber lapidum_ to the prose Evax.
+### Relation of his Liber lapidum to the prose Evax.
 
 The _Liber lapidum_ is a Latin poem of 734 hexameters describing sixty stones. In the opening lines Marbod writes: 
 
@@ -69,7 +71,7 @@ King, and Rose after him, asserted  [^777:5] that despite Marbod's professed abr
 Rose thought that some of the descriptions of stones were from Solinus, the rest from Isidore, but that the account of their virtues was from Evax. King also noted occasional extracts from the Orphic work, _Lithica_, which is not surprising in view of the fact that both Evax and the _Lithica_ seem based on Damigeron. This question of sources and ultimate origins is, however, as usual of relatively little moment to our investigation.   
 My own impression would be that in antiquity and the middle age there exists a sort of common fund of information and stock of beliefs concerning gems which naturally is drawn upon and appears in every individual treatise upon them. But the number of gems discussed and the order in which they are considered or classified varies with each new author, and there is apt to be a similar variation in the number of statements made concerning any particular stone and the way in which these are arranged. In fine, all ancient and medieval accounts of the natures and virtues of stones bear a general resemblance to one another which is more impressive than is the similarity between any two given accounts, and testify to a consensus of opinion and to a common learned tradition concerning gems which is more significant than the possible borrowings of individual authors from one another. 
 
-### Influence of the _Liber lapidum_.
+### Influence of the Liber lapidum
 
 However, there seems to be little doubt that the poem of Marbod is itself an outstanding work among medieval accounts of precious stones, first because of the early date of its authorship, and second because of its late persistence and popularity, which is indicated by the fourteen editions that appeared after the invention of printing. [^778:1] Its convenient form perhaps accounts to a considerable extent for its popularity. At any rate the manuscripts of it are numerous, and it was much used by subsequent writers of the twelfth and thirteenth centuries, although citations of Lapidaritis cannot always be assumed to refer to Marbod. But at least the notions concerning gems which we find in his poem are a fair sample of what we should find in any Latin treatment of the same subject for several centuries to come. It is found also in a medieval French version. 
 
@@ -109,13 +111,13 @@ Pliny also briefly states that the stone _diadochos_ resembles beryl, but does n
 
  [^780:2]: The stones which I have taken as examples are numbers 1, 3, 5, 18, 19, 39, and 57 respectively. 
 
-### _Liber lapidum_ meant seriously.
+### Liber lapidum meant seriously
 
 The vast powers, not only medicinal and physical, but of divination and magic, over the mind and affections, miraculous and supernatural, even over God, as in the statement that the sapphire can be employed to secure a more favorable answer to prayer, which Marbod assigns to gems without a sign of scruple or scepticism or disapproval on his part, have so shocked some moderns that suggestions have been made, in order to explain away the acceptance of talismanic powers of gems to such a degree by a Christian clergy man who became a bishop, that Marbod must have composed his poem when quite young and lived to repent it, or that he regarded it merely as a poetical flight and exercise, not as an exposition of scientific fact. But wherefore then was it not only widely read in the literary twelfth century but also widely cited as an authority in the scientific and equally Christian thirteenth century?  
 No; everyone else took it precisely as Marbod meant it, as a serious statement of the marvelous powers which had been divinely implanted in gems. And why should not God be more easily reached through the instrumentality of gems, since He had endowed them with their marvelous virtues?  
 Marbod affirms his own faith in the great virtues of gems not only at the beginning but the close of his poem, stating that while some have doubted the marvelous properties attributed to them, this has been due to the fact that so many imitation gems are made of glass, which deceive the unwary but of course lack the occult virtues of the genuine stones. If the stones are genuine and duly consecrated, the marvelous effects will without a doubt follow. 
 
-###  _De fato et genesi_. 
+### De fato et genesi 
 
 Marbod's belief in the almost boundless talismanic virtues of gems is thrown into the higher relief by the fact that in another of his poems he makes an attack upon ge- nethlialogy or the prediction of the entire life of the individual from the constellations at his birth. In _De fato et genesi_ he writes against "the common notion" (_opinio vulgi_) that all things are ruled by fate, that the hour of nativity controls man's entire life, and the contention of the mathematici that the seven planets control not only the external forces with which man comes in contact but also human character. He objects to such a doctrine as that, when Venus and Mars appear in certain relations to the sun, the babe born under that constellation will be destined to commit incest and adultery in later life. He objects that such beliefs destroy all the foundations of morality, law, and future reward or punishment; contends that there are certain races which never commit adultery or crime, yet have the same seven planets; and argues that since Jews are all circumcised on the eighth day, they should all have the same horoscope. These are familiar contentions, at least as old as Bardesanes. Marbod declares further that the astrological writer, Firmicus, employs "infirm arguments," and that his own horoscope, taken according to Firmicus' methods and interpreted likewise, turned out to be false, "as I proved when once I dabbled in that art." This is interesting as showing that Gerard of York [^782:1] was not the only bishop of the eleventh century who was acquainted with the work of Julius Firmicus Maternus, and that even opponents of astrology are apt to have once been dabblers in it. Marbod concludes his poem with this neat turn: 
 
