--- a/Slak/34.md
+++ b/Slak/34.md
@@ -62,7 +62,7 @@ Fifty chapters are then devoted to as many stones, beginning with Aetites, which
 
  [^777:4]: See page 775, note 2.
  
-### Problem of Marbod's sources.
+### Problem of Marbod sources.
 
 King, and Rose after him, asserted  [^777:5] that despite Marbod's professed abridgement of a work which Evax was supposed to have presented to Tiberius, he drew largely from Isidore of Seville's _Etymologies_. 
 
@@ -119,7 +119,7 @@ Marbod affirms his own faith in the great virtues of gems not only at the beginn
 
 ### De fato et genesi 
 
-Marbod's belief in the almost boundless talismanic virtues of gems is thrown into the higher relief by the fact that in another of his poems he makes an attack upon ge- nethlialogy or the prediction of the entire life of the individual from the constellations at his birth. In _De fato et genesi_ he writes against "the common notion" (_opinio vulgi_) that all things are ruled by fate, that the hour of nativity controls man's entire life, and the contention of the mathematici that the seven planets control not only the external forces with which man comes in contact but also human character. He objects to such a doctrine as that, when Venus and Mars appear in certain relations to the sun, the babe born under that constellation will be destined to commit incest and adultery in later life. He objects that such beliefs destroy all the foundations of morality, law, and future reward or punishment; contends that there are certain races which never commit adultery or crime, yet have the same seven planets; and argues that since Jews are all circumcised on the eighth day, they should all have the same horoscope. These are familiar contentions, at least as old as Bardesanes. Marbod declares further that the astrological writer, Firmicus, employs "infirm arguments," and that his own horoscope, taken according to Firmicus' methods and interpreted likewise, turned out to be false, "as I proved when once I dabbled in that art." This is interesting as showing that Gerard of York [^782:1] was not the only bishop of the eleventh century who was acquainted with the work of Julius Firmicus Maternus, and that even opponents of astrology are apt to have once been dabblers in it. Marbod concludes his poem with this neat turn: 
+Marbod's belief in the almost boundless talismanic virtues of gems is thrown into the higher relief by the fact that in another of his poems he makes an attack upon genethlialogy or the prediction of the entire life of the individual from the constellations at his birth. In _De fato et genesi_ he writes against "the common notion" (_opinio vulgi_) that all things are ruled by fate, that the hour of nativity controls man's entire life, and the contention of the mathematici that the seven planets control not only the external forces with which man comes in contact but also human character. He objects to such a doctrine as that, when Venus and Mars appear in certain relations to the sun, the babe born under that constellation will be destined to commit incest and adultery in later life. He objects that such beliefs destroy all the foundations of morality, law, and future reward or punishment; contends that there are certain races which never commit adultery or crime, yet have the same seven planets; and argues that since Jews are all circumcised on the eighth day, they should all have the same horoscope. These are familiar contentions, at least as old as Bardesanes. Marbod declares further that the astrological writer, Firmicus, employs "infirm arguments," and that his own horoscope, taken according to Firmicus' methods and interpreted likewise, turned out to be false, "as I proved when once I dabbled in that art." This is interesting as showing that Gerard of York [^782:1] was not the only bishop of the eleventh century who was acquainted with the work of Julius Firmicus Maternus, and that even opponents of astrology are apt to have once been dabblers in it. Marbod concludes his poem with this neat turn: 
 
  [^782:1]: See above, chapter 29, page 689
 
