--- a/Slak/02.md
+++ b/Slak/02.md
@@ -64,7 +64,7 @@ Pliny the Elder, as we learn from his own statements in the _Natural History_ an
 Of Pliny's writings the _Natural History_ is alone extant  but other titles have been preserved which serve to show his great literary industry and the extent of his interests. He wrote on the use of the javelin by cavalry, a life of his friend Pomponius, an account in twenty books of all the wars waged by the Romans in Germany, a rather long work on oratory called _The Student_, a grammatical or philological work in eight books entitled _De dubio sermone_, and a continuation of the History of Aufidius Bassus in thirty one books. Yet in the dedication of the Natural History to the emperor Titus he states that his days were taken up with official business and only his nights were free for literary labor. This statement is supported by a letter of his nephew telling how he used to study by candle-light both late at night and before daybreak.  
 Pliny the Younger narrates several incidents to illustrate how jealous and economical of every spare moment his uncle was. He would dictate or have books read to him while lying down or in the bath, and on journeys a secretary was always by his side with books and tablets. If the weather was very cold, the amanuensis wore gloves so that his hands might not become too numb to write. Pliny always took notes on what he read, and at his death left his nephew one hundred and sixty notebooks written in a small hand on both sides.  
 
-### His own description of the _Natural History_
+### His own description of the Natural History
 
 Such were the conditions under which, and the methods by which, Pliny compiled his encyclopedia on nature. No Natural single writer either Greek or Latin, he tells us, had ever before attempted so extensive a task. He adds that he treats of some twenty thousand topics gleaned from the perusal of about two thousand volumes by one hundred authors. [^46:1] 
 
