--- a/Slak/03.md
+++ b/Slak/03.md
@@ -180,7 +180,7 @@ Possibly a work by Ptolemy has received medieval additions, either Arabic or Lat
 
  [^109:2]: It was also so printed in _Sphera cum commentis_, 1518: “Explicit secundus et ultimus liber Ptolomei de Speculis. Completa fuit eius translatio ultimo Decembris anno Christi 1269."
  
-### Medieval translations of _Almagest_.
+### Medieval translations of Almagest.
 
 If there is, as in other parallel cases, the possibility that the medieval period passed off recent discoveries of its own under the authoritative name of Ptolemy, there also is the certainty that it made Ptolemy's genuine works very much its own. This may be illustrated by the case of the _Almagest_. On the verge of the medieval period the work was commented upon by Pappus and Theon at Alexandria in the fourth, and by Proclus in the fifth century. The Latin translation by Boethius is not extant, but the book was in great repute among the Arabs, was translated at Bagdad early in the ninth century and revised later in the same century by Tabit ben Corra. During the twelfth century it was translated into Latin both from the Greek and the Arabic. The translation most familiar in the middle ages was that completed at Toledo in 1175 by the famous translator, Gerard of Cremona. There has recently been discovered, however, by Professors Haskins and Lockwood [^109:3] a Sicilian translation made direct from the Greek text some ten or twelve years before Gerard's translation.  
 
@@ -190,7 +190,7 @@ J.L.Heiberg, _Eine mittelalterliche Üebersetzsung der Syntaxis des Ptolemaios_,
 
 There are two manuscripts of this Sicilian translation in the Vatican and one at Florence, showing that it had at least some Italian currency. Gerard's reputation and his many other astronomical and astrological translations probably account for the greater prevalence of his version, or possibly the theological opposition to natural science of which the anonymous Sicilian translator speaks in his preface had some effect in preventing the spread of his version. 
 
-### _Tetrabiblos_ or _Quadripartitum_ .
+### Tetrabiblos or Quadripartitum
 
 Of Ptolemy's genuine works the most germane to and significant for our investigation is his _Tetrahihlos, Quadripartitum_, or four books on the control of human life by the stars. It seems to have been translated into Latin by Plato of Tivoli in the first half of the twelfth century [^110:1] before Almagest or Geography appeared in Latin. 
 
@@ -253,7 +253,7 @@ The effects of the stars vary according to time as well as place, so that the pe
 
 The last two books take up the prediction of events in Nativities. the lives of individuals from the stars, in other words the science of nativities or genethlialogy. The third book discusses conception and birth, how to take the horoscope - Ptolemy insists that the astrolabe is the only reliable instrument for determining the exact time; sun-dials or water-clocks will not do - and how to predict concerning parents, brothers and sisters, sex, twins, monstrous births, length of life, the physical constitution of the child born and what accidents and diseases may befall it, and finally concerning mental traits and defects. The fourth book deals less with the nature of the individual and more with the prediction of external events which befall the individual: honors, office, marriage, offspring, slaves, travel, and the sort of death that he will die. Ptolemy in opening the fourth book makes the distinction that, while in the third book he treated of matters antecedent to birth or immediately related to birth or which concern the temperament of the individual, now he will deal with those external to the body and which happen to the individual from without. But of course it is difficult to maintain such a distinction with entire consistency. 
 
-### Future influence of the _Tetrabiblos_.
+### Future influence of the Tetrabiblos
 
 The great influence of the Tetrabiblos is shown not only in medieval Arabic commentaries and Latin translations, but more immediately in the astrological writings of the declining Roman Empire, when such astrologers as Hephaestion of Thebes. [^116:1] Paul of Alexandria, and Julius Firmicus Maternus cite it as a leading authoritative work. Only the opponents of astrology appear to have remained ignorant of the Tetrabiblos, continuing to make criticisms of the art which do not apply to Ptolemy's presentation of it or which had been specifically answered by him. Thus Sextus Empiricus, attacking astrology about 200 A.D., does not mention the Tetrabiblos and some of the Christian critics of astrology apparently had not read it. Whether the Neo Platonists, Porphyry and Proclus, wrote an introduction to and commentary upon it is disputed. 
 
