--- a/Slak/08.md
+++ b/Slak/08.md
@@ -1,7 +1,7 @@
 
 # Chapter VIII 
 
-## Philostratus's _Life of Apollonius_ of Tyana 
+## Philostratus Life of Apollonius of Tyana 
 
 ### Compared with Apuleius.
 
