--- a/Slak/02.md
+++ b/Slak/02.md
@@ -20,7 +20,7 @@ We shall therefore open the present section of our investigation by considering 
 
 # CHAPTER II 
 
-## Pliny's natural history 
+## Pliny natural history 
 
 > _"Salve, parens rerum omnium Natura, teque nobis Quiritium solis celehratam esse numeris omnibus tuis fave!"_ 
 
@@ -55,7 +55,7 @@ Nevertheless, his work is primarily an account of nature rather than of civiliza
 _The Natural History_ is a great storehouse of misinformation as well as of information, for Pliny's credulity and lack of discrimination harvested the tares of legend and magic along with the wheat of historical fact and ancient science in his voluminous granary. This may put other historical investigators upon their guard in accepting its statements, but only increases its value for our purpose. Perhaps it is even more valuable as a collection of ancient errors than it is as a repository of ancient science. It touches upon many of the varieties, and illustrates most of the characteristics, of magic.   
 Moreover, Pliny often mentions the Magi or magicians and discusses "magic" expressly at some length in the opening chapters of his thirtieth book-one of the most important passages on the theme in any ancient writer. 
 
-### Pliny's career.  
+### Career.  
 
 Pliny the Elder, as we learn from his own statements in the _Natural History_ and from one or two letters concerning  him written by his nephew, Pliny the Younger, whom he adopted, went through the usual military, forensic, and official career of the Roman of good family, and spent his life largely in the service of the emperors. He visited various Mediterranean lands, such as Spain, Africa, Greece, and Egypt, and fought in Germany. He was in charge of the Roman fleet on the west coast of Italy when he met his death at the age of fifty-six by suffocation as he was trying to rescue others from the fumes and vapors from the eruption of Mount Vesuvius.  
 
@@ -405,7 +405,7 @@ Thus the transition is an easy one from signs of experimental science in the Nat
 
  [^57:9]: XXVIII, 7. 
 
-## III. Pliny's Account of Magic. 
+## III. Account of Magic. 
 
 ### Oriental origin of magic  
 
@@ -514,7 +514,7 @@ Pliny thinks that humanity owes a great debt to the Roman government for abolish
 
  [^62:1]: XXX, 4.
 
-### Pliny's censure of magic is mainly intellectual. 
+### Censure of magic is mainly intellectual. 
 
 Pliny nevertheless lays less stress upon the moral argument against magic as criminal or indecent than he does upon the intellectual objection to it as untrue and unscientific.  
 Indeed, so far as decency is concerned, his own medicine will be seen to be far from prudish, while he elsewhere gives instances of magicians guarding against defilement. [^62:2] 
@@ -813,9 +813,9 @@ Toe and finger nail parings mixed with wax are to be attached ere sunrise to ano
 
 Such is the picture we derive from numerous passages in the _Natural History_ of the magic art, its materials and rites, the effects it seeks to produce, and its general attitude towards nature. Besides the natural materials employed and the marvelous results sought, we have noted the frequent  use of ligatures, suspensions, and amulets, the observe of astrological conditions, of certain times and numbers, rules for plucking herbs and tying knots, stress on the use of the right or left hand - in other words, on position or direction, some employment of incantations, some sacrifice and fumigation, some specimens of sympathetic magic, of the theory that "like cures like," and of other types of magic logic. 
 
-## V. Pliny's Magical Science   
+## V. Magical Science   
 
-### From the magi to Pliny's magic  
+### From the magi to Pliny magic  
 
 We may now turn to the still more numerous passages of the _Natural History_ where the magi are not cited and compare the virtues there ascribed to the things of nature and the methods employed in medicine and agriculture with those of the magicians. We shall find many striking resemblances and shall soon come to a realization that there is more magic in the _Natural History_ which is not attributed to the magi than there is that is. Pliny did not need to warn us that medicine had been corrupted by magic; his own medicine proves it.  
 It is this fact, that virtually his entire work is crammed with marvelous properties and fantastic ceremonial, which makes it so difficult in some places to tell when he begins to draw material from the magi and when he leaves off. By a detailed analysis of this remaining material we shall now attempt to classify the substances of which Pliny makes use and the virtues which he ascribes to them, the rites and methods of procedure by which they are employed, and certain superstitious doctrines and notions which are involved. We shall thus find that almost precisely the same factors are present in his science as in the lore of the magicians.
