--- a/Slak/02.md
+++ b/Slak/02.md
@@ -1792,7 +1792,7 @@ Indeed, painstaking men of research had discovered that even the entrails of the
 
  [^98:7]: II, 41.
 
-### Conclusion: magic unity of Pliny's superstitions. 
+### Conclusion: magic unity of Pliny superstitions. 
 
 We have tried to analyze the contents of the Natural History, bringing out certain main divisions and underlying principles of magic in Pliny's agriculture, medicine, and natural science. This is, however, an artificial and difficult task, since it is not easy to sever materials from ceremonial or the virtues of objects from the relations of sympathy or antipathy between them. Often the same passage might serve to illustrate several points. Take for example the following sentence: 
 
