--- a/Slak/02.md
+++ b/Slak/02.md
@@ -529,7 +529,7 @@ Pliny then adds more charitably,
 
  [^62:3]: XXVII, 29.
 
-### Vagueness of Pliny's scepticism. 
+### Vagueness of Pliny scepticism. 
 
 Pliny himself fails to maintain a consistently sceptical attitude towards magic. His exact attitude is often hard to determine.   
 Often it is difficult to say whether he is speaking in sober earnest or in a tone of light and easy pleasantry and sarcasm, as in the passage just cited concerning Democritus.  
