--- a/Slak/03.md
+++ b/Slak/03.md
@@ -30,7 +30,7 @@ In one passage Seneca perhaps expresses his consciousness of the very imperfect 
 
 Indeed, he shows a tendency to regard scientific research as a sort of religious exercise or perhaps as a substitute for existing religion and a basis for moral philosophy. He relates physics to ethics. His enthusiasm in the study of natural forces appears largely due to the fact that he believes them to be of a sublime and divine character and above the petty affairs of men. He also as constantly and more fulsomely than Pliny inveighs against the luxury, vice, and immorality of his own day, and moralizes as to the beneficent influence which natural law and phenomena should exert upon human conduct. It is interesting to note that this habit of drawing moral lessons from the facts of nature was not peculiar to medieval or Christian writers. 
 
-### Limited field of Seneca's work
+### Limited field of Seneca work
 
 With such subjects as zoology, botany, and mineralogy Seneca's work has little to do; it does not, like Pliny's _Natural History_, include medicine and the industrial arts; neither does he, like Pliny, cite the lore of the _magi_. The phenomena of which he treats are mainly meteorological manifestations, such as winds, rain, hail, snow, comets, rainbows, and what he regards as allied subjects, earthquakes, springs, and rivers. Perhaps he would not have regarded the study of vegetables, animals, and minerals as so lofty and sublime a pursuit. At any rate, in consequence of the restricted field which Seneca covers we find very little of the marvelous medicinal and magical properties of plants, animals, and other objects, or the superstitious procedure which fill the pages of Pliny. 
 
