--- a/Slak/04.md
+++ b/Slak/04.md
@@ -262,7 +262,7 @@ He praises the Severi, however, for permitting others to use theriac, a noted me
 
  [^130:2]: Ad Pisonem de theriaca, Kühn, XIV, 217.
 
-### Galen's private supply of drugs: terra sigillata. 
+### Galen private supply of drugs: terra sigillata. 
 
 Galen himself, and apparently other physicians, were not content to rely for medicines either upon the unguent-sellers or the bounty of the imperial stores. Galen stored away oil and fat and left them to age until he had enough to last for a hundred years, including some from his father's lifetime. He used some forty years old in one prescription. [^130:3] 
 
