--- a/Slak/04.md
+++ b/Slak/04.md
@@ -62,7 +62,7 @@ that errors in the printed text, and the technical vocabulary with numerous word
 
  [^120:3]: Perhaps at this point a similarly candid confession by the present writer is in order. I have tried to do a little more than Dr. Payne in his modesty seems ready to admit of himself, and to look over carefully enough not to miss anything of importance those works which seemed at all likely to bear upon my particular interest, the history of science and magic. In consequence I have examined long stretches of text from which I have got nothing. For the most part, I thought it better not to take time to read the Hippocratic commentaries. At first I was inclined to depend upon others for Galen’s treatises on anatomy and physiology, but finally I read most of them in order to learn at first hand of his argument from design and_ his attitude towards dissection. Further than this the reader can probably judge for himself from my citations as to the extent and depth of my reading. My first draft was completed before I discovered that Puschmann had made considerable use of Galen for medical conditions in the Roman Empire in his History of Medical Education, English translation, London, 1891, pp. 93-113. For the sake of a complete and well-rounded survey I have thought it best to retain those passages where I cover about the same ground. I have been unable to procure T.Meyer-Steineg, _Ein Tag im Leben des Galen_, Jena, 1913, 63 pp. 
 
-### The manuscript tradition of Galen's works.
+### The manuscript tradition of Galen works.
 
 Although the works of Galen are so voluminous, they have reached us for the most part in comparatively late manuscripts  [^121:1]  and to some extent perhaps only in their medieval form. The extant manuscripts of the Greek text are mostly of the fifteenth century and represent the enthusiasm of humanists who hoped by reviving the study of Galen in the original to get something new and better out of him than the school men had. In this expectation they seem to have been for the most part disappointed; the middle ages had already absorbed Galen too thoroughly. 
 
