--- a/Slak/04.md
+++ b/Slak/04.md
@@ -84,7 +84,7 @@ For the last five books of the Anatomical Exercises the only extant text is an A
 
  [^121:5]: Payne, Lancet (1896), p. 1130.
 
-### Galen's vivid personality.
+### Galen vivid personality.
 
 If so comparatively little is generally known about Galen, it is not because he had an unattractive personality. Nor is it difficult to make out the main events of his hfe. His works supply an unusual amount of personal information, and throughout his writings, unless he is merely transcribing past prescriptions, he talks like a living man, detailing incidents of daily life and making upon the reader a vivid and unaffected impression of reality. Daremberg asserts [^122:1] that the exuberance of his imagination and his vanity frequently make us smile. 
 
