--- a/Slak/04.md
+++ b/Slak/04.md
@@ -215,7 +215,7 @@ Many of his fellow-students regarded as a counsel of perfection unattainable by 
 
  [^128:2]: Kühn, X, 560. 
 
-### Medical discovery in Galen's time. 
+### Medical discovery in Galen time.
 
 Galen was, it has already been made apparent, an intellectual aristocrat, and possessed little patience with those stupid men who never learn anything for themselves, though they see a myriad cures worked before their eyes. But that, apart from his own work, the medical profession was not entirely stagnant in his time, he admits when he asserts that many things are known to-day which had not been discovered before, and when he mentions some curative methods recently invented at Rome. [^128:3] 
 
