--- a/Slak/04.md
+++ b/Slak/04.md
@@ -131,7 +131,7 @@ Galen's interest in philosophy continued, however, and he wrote many logical and
 
  [^124:2]: _Fragments du commentaire de Galien sur le Tim&eacute;e de Platon_, were published for the first time, both in Greek and a French translation, together with an Essai sur Galien considere comme philosophe, by Ch.Daremberg, Paris, 1848. 
 
-### First visit to Rome. .
+### First visit to Rome.
 
 Galen returned to Pergamum to practice and was, when but twenty-nine, made the doctor for the gladiators by five successive pontiffs. [^124:3] 
 
