--- a/Slak/12.md
+++ b/Slak/12.md
@@ -3,7 +3,7 @@
 
 ## Aelian 
 
-### _On the Nature of Animals_.
+### On the Nature of Animals.
 
 From mystic and theurgic compositions we return to works of the declining Roman Empire which deal more directly with nature but, it must be confessed, in a manner somewhat fantastic. About the beginning of the third century, Aelian of Praeneste, who is included by Philostratus in his _Lives of the Sophists_, wrote _On the Nature of Animals_ [^322:1] 
 
